# bitcoin_txref_code

ref/c/: CMakeLists.txt  tests-ext.c  txrefext_code.c  txrefext_code.h
